fix: use flex in button alignement (#90)

--- a/src/theme/_button-groups.dropdown.scss
+++ b/src/theme/_button-groups.dropdown.scss
@@ -4,6 +4,8 @@
 ////
 
 .btn-group {
+	display: inline-flex;
+
 	.btn {
 		&-primary,
 		&-success,
